objects/tz__LT_Object_Setting__c.object
<CustomObject>
    <fields>
        <fullName>tz__API_Name__c</fullName>
        <description>API name of the object.</description>
        <inlineHelpText>API name of the object.</inlineHelpText>
        <label>API Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__After_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable or disable after insert / update trigger.</description>
        <inlineHelpText>Enable or disable after insert / update trigger.</inlineHelpText>
        <label>After Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tz__City__c</fullName>
        <description>API name of the city field.</description>
        <inlineHelpText>API name of the city field.</inlineHelpText>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Country__c</fullName>
        <description>API name of the country field.</description>
        <inlineHelpText>API name of the country field.</inlineHelpText>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__IANA_Override__c</fullName>
        <description>Option to override the default lookup based on address/phone fields. When you input a valid IANA Timezone in the selected field (Example: America/New_York), the App fetches the timezone information based on this value and ignores address/phone fields. Useful for United States Armed Forces.</description>
        <inlineHelpText>Option to override the lookup based on address/phone fields. When you input a valid IANA Timezone in the selected field (Example: America/New_York), the App fetches the timezone information based on this value. Useful for United States Armed Forces.</inlineHelpText>
        <label>IANA Override</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Lookup_Order__c</fullName>
        <defaultValue>"Address"</defaultValue>
        <description>Select the lookup order to identify the timezone. Default is Address fields. The App will first attempt to identify the timezone based on address fields, and if it does not succeed, it will use the Phone field.</description>
        <inlineHelpText>Select the lookup order to identify the timezone. Default is Address fields. The App will first attempt to identify the timezone based on address fields, and if it does not succeed, it will use the Phone field.</inlineHelpText>
        <label>Lookup Order</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Phone__c</fullName>
        <description>API name of the phone field.</description>
        <inlineHelpText>API name of the phone field.</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>tz__Postal_Code__c</fullName>
        <description>API name of the postal code field.</description>
        <inlineHelpText>API name of the postal code field.</inlineHelpText>
        <label>Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__State__c</fullName>
        <description>API name of the state field.</description>
        <inlineHelpText>API name of the state field.</inlineHelpText>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tz__Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable or disable before insert / update trigger. If the trigger is disabled, the App will not be able to update the local time custom fields.</description>
        <inlineHelpText>Enable or disable trigger. If the trigger is disabled, the App will not be able to update the local time custom fields.</inlineHelpText>
        <label>Before Trigger</label>
        <type>Checkbox</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>Settings for the Local Time App. Please update these settings from the Local Time Config tab instead of directly manipulating them here.</description>
    <label>Local Time Object Setting</label>
</CustomObject>